<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_equal"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/orange"
        android:text="@string/equal_to"
        android:textSize="40sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@+id/button_brackets"
        app:layout_constraintStart_toEndOf="@+id/button_dot" />

    <Button
        android:id="@+id/button_addition"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/round_button"
        android:text="@string/addition"
        android:textSize="40sp"
        android:textColor="@color/orange"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="@+id/button_equal"
        app:layout_constraintTop_toTopOf="@+id/button_digit_1" />

    <Button
        android:id="@+id/button_subtraction"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/round_button"
        android:text="@string/subtraction"
        android:textSize="40sp"
        android:textColor="@color/orange"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="@+id/button_equal"
        app:layout_constraintTop_toTopOf="@+id/button_digit_4" />

    <Button
        android:id="@+id/button_multiplication"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/round_button"
        android:text="@string/multiplication"
        android:textSize="40sp"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="@+id/button_equal"
        app:layout_constraintTop_toTopOf="@+id/button_digit_7" />

    <Button
        android:id="@+id/button_division"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/round_button"
        android:text="@string/division"
        android:textSize="40sp"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="@+id/button_equal"
        app:layout_constraintTop_toTopOf="@+id/button_ac" />

    <Button
        android:id="@+id/button_percentage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/round_button"
        android:text="@string/percentage"
        android:textSize="40sp"
        android:textColor="@color/orange"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="@+id/button_dot"
        app:layout_constraintTop_toTopOf="@+id/button_ac" />

    <Button
        android:id="@+id/button_dot"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/round_button"
        android:text="@string/dot"
        android:textSize="45sp"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@+id/button_brackets"
        app:layout_constraintStart_toEndOf="@+id/button_digit_0" />

    <Button
        android:id="@+id/button_digit_6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/round_button"
        android:text="@string/digit_6"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="@+id/button_dot"
        app:layout_constraintTop_toTopOf="@+id/button_digit_4" />

    <Button
        android:id="@+id/button_digit_3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/round_button"
        android:text="@string/digit_3"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="@+id/button_dot"
        app:layout_constraintTop_toTopOf="@+id/button_digit_1" />

    <Button
        android:id="@+id/button_digit_0"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/round_button"
        android:text="@string/digit_0"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:backgroundTint="@null"
        app:cornerRadius="@dimen/cardview_compat_inset_shadow"
        app:layout_constraintBottom_toBottomOf="@+id/button_brackets"
        app:layout_constraintStart_toEndOf="@+id/button_brackets" />

    <Button
        android:id="@+id/button_digit_1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/round_button"
        android:text="@string/digit_1"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/button_brackets"
        app:layout_constraintStart_toStartOf="@+id/button_brackets" />

    <Button
        android:id="@+id/button_digit_2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/round_button"
        android:text="@string/digit_2"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="@+id/button_digit_0"
        app:layout_constraintTop_toTopOf="@+id/button_digit_1" />

    <Button
        android:id="@+id/button_digit_4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/round_button"
        android:text="@string/digit_4"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/button_digit_1"
        app:layout_constraintStart_toStartOf="@+id/button_brackets" />

    <Button
        android:id="@+id/button_digit_5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/round_button"
        android:text="@string/digit_5"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="@+id/button_digit_0"
        app:layout_constraintTop_toTopOf="@+id/button_digit_4" />

    <Button
        android:id="@+id/button_digit_7"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/round_button"
        android:text="@string/digit_7"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/button_digit_4"
        app:layout_constraintStart_toStartOf="@+id/button_brackets" />

    <Button
        android:id="@+id/button_digit_8"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/round_button"
        android:text="@string/digit_8"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="@+id/button_digit_0"
        app:layout_constraintTop_toTopOf="@+id/button_digit_7" />

    <Button
        android:id="@+id/button_digit_9"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/round_button"
        android:text="@string/digit_9"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="@+id/button_dot"
        app:layout_constraintTop_toTopOf="@+id/button_digit_7" />

    <Button
        android:id="@+id/button_ac"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/round_button"
        android:text="@string/AC"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        android:textSize="30sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/button_digit_7"
        app:layout_constraintStart_toStartOf="@+id/button_brackets" />

    <Button
        android:id="@+id/button_backspace"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_backspace"
        android:insetLeft="-10dp"
        app:backgroundTint="@null"
        android:text="@string/backspace"
        app:icon="@drawable/ic_button_backspace1"
        app:iconTint="@color/orange"
        app:layout_constraintStart_toStartOf="@+id/button_digit_0"
        app:layout_constraintTop_toTopOf="@+id/button_ac" />

    <Button
        android:id="@+id/button_brackets"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/round_button"
        android:text="@string/brackets"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_expression"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="end"
        android:minWidth="335dp"
        android:minHeight="20dp"
        android:textColor="@color/black"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:minWidth="335dp"
        android:minHeight="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/digit_0"
        android:textSize="45sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_expression" />

</androidx.constraintlayout.widget.ConstraintLayout>